# Lab_18

./: CMakeLists.txt  CMakePresets.json
Lab_18/: CMakeLists.txt  Lab_18.cpp  Lab_18.h
src/: main.c
